<resources>
    <string name="app_name">FYP</string>
    <string name="hint_set">Set</string>
    <string name="hint_weight">Weight</string>
    <string name="hint_reps">Reps</string>
    <string name="hint_exercise_name">Exercise name</string>
    <string name="reps">reps</string>
    <string name="set">Set</string>
    <string name="kg">kg</string>
    <string name="log_title">log title</string>
    <string name="log_content">log content</string>
    <string name="log_timestamp">timestamp</string>
    <string name="log_toolbar">Log</string>
    <string name="select_exercise">Select Exercise</string>
    <string name="workout">Workout</string>
    <string name="finish">FINISH</string>
    <string name="exercise_name">Exercise name</string>
    <string name="name">Name</string>
    <string name="volume">Volume</string>
    <string name="_1rm">1RM</string>
    <string name="est_1rm">Est. 1RM:</string>
    <string name="hint_volume">Volume:</string>
    <string name="statistics">Statistics</string>
    <string name="bodyweight">Bodyweight</string>
    <string name="insert_weight">Insert weight</string>
    <string name="add_weight">Add weight</string>
    <string name="weight">Weight</string>
    <string name="timestamp">Timestamp</string>
    <string name="body_measurements">Body measurements</string>
    <string name="insert_measurement">insert measurement</string>
    <string name="inches">Inches</string>
    <string name="measurement">measurement</string>
    <string name="bodypart">bodypart</string>
    <string name="insert">insert</string>
    <string name="muscles_targeted">Muscles targeted</string>
    <string name="previous_attempts">Previous Attempts</string>
    <string name="add_set">Add Set</string>
    <string name="routines">Routines</string>
    <string name="routine_title">Routine title</string>
    <string name="start">START</string>
    <string name="new_exercise">New Exercise</string>
    <string name="filter">Filter</string>

    <string-array name="muscles">
        <item>Abs</item>
        <item>Back</item>
        <item>Biceps</item>
        <item>Chest</item>
        <item>Legs</item>
        <item>Shoulders</item>
        <item>Triceps</item>
    </string-array>

    <string-array name="musclesMain">
        <item>All</item>
        <item>Abs</item>
        <item>Back</item>
        <item>Biceps</item>
        <item>Chest</item>
        <item>Legs</item>
        <item>Shoulders</item>
        <item>Triceps</item>
    </string-array>

    <string-array name="bodyparts">
        <item>Waist</item>
        <item>Chest</item>
        <item>Arms</item>
    </string-array>

</resources>
