<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="10dp">

    <TextView
        android:id="@+id/tvMeasurement"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/measurement"
        android:textColor="#000"
        android:textSize="20sp"
        android:paddingLeft="10dp"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"/>

    <TextView
        android:id="@+id/tvInches"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="75"
        android:paddingLeft="8dp"
        android:text="@string/inches"
        android:textColor="#000"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/tvBodypart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bodypart"
        android:textSize="14sp"
        android:padding="10dp"/>

    <TextView
        android:id="@+id/tvTimestamp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/timestamp"
        android:textSize="14sp"
        android:padding="10dp"/>


</LinearLayout>