<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:gravity="center_vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

    <TextView
        android:id="@+id/log_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="75"
        android:text="@string/log_title"
        android:textColor="#000"
        android:textSize="25sp"
        android:padding="10dp"/>

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="10"/>

    <TextView
        android:id="@+id/log_timestamp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/log_timestamp"
        android:textSize="12sp"
        android:padding="10dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/log_content"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="75"
            android:text="@string/log_content"
            android:textColor="#000"
            android:textSize="15sp"
            android:padding="10dp"/>

    </LinearLayout>

</LinearLayout>