<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/parent"
    android:background="@drawable/border"
    android:layout_marginTop="5dp"
    android:layout_marginLeft="5dp"
    android:layout_marginRight="5dp"
    card_view:cardCornerRadius="4dp">


    <android.support.constraint.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">


        <TextView
            android:id="@+id/title_exercise_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="16dp"
            android:paddingLeft="10dp"
            android:text="@string/hint_exercise_name"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="23dp" />

        <TextView
            android:id="@+id/set_timestamp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/log_timestamp"
            android:textSize="16sp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="@id/cardView"
            android:padding="10dp"/>



        <TextView
            android:id="@+id/title_sets"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="16dp"
            android:paddingLeft="10dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:text="@string/hint_set"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textColor="#DE000000"
            android:textSize="20dp"
            app:layout_constraintTop_toBottomOf="@id/title_exercise_name" />

        <TextView
            android:id="@+id/title_volume_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="16dp"
            android:padding="3dp"
            android:text="@string/hint_volume"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textColor="@color/colorPrimary"
            android:textSize="15dp"
            app:layout_constraintTop_toBottomOf="@id/title_exercise_name"
            app:layout_constraintRight_toLeftOf="@id/title_volume"/>

        <TextView
            android:id="@+id/title_volume"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="16dp"
            android:padding="3dp"
            android:text="@string/volume"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textColor="#DE000000"
            android:textSize="15dp"
            app:layout_constraintTop_toBottomOf="@id/title_exercise_name"
            app:layout_constraintEnd_toEndOf="@id/cardView"/>

        <TextView
            android:id="@+id/title_1rm_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="16dp"
            android:padding="3dp"
            android:text="@string/est_1rm"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textColor="@color/colorPrimary"
            android:textSize="15dp"
            app:layout_constraintTop_toBottomOf="@id/title_volume"
            app:layout_constraintRight_toLeftOf="@id/title_1rm"/>

        <TextView
            android:id="@+id/title_1rm"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="16dp"
            android:padding="3dp"
            android:text="@string/_1rm"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textColor="#DE000000"
            android:textSize="15dp"
            app:layout_constraintTop_toBottomOf="@id/title_volume"
            app:layout_constraintEnd_toEndOf="@id/cardView"/>




        <!--<ListView-->
            <!--android:id="@+id/list_set"-->
            <!--android:layout_width="40dp"-->
            <!--android:layout_height="33dp"-->
            <!--app:layout_constraintTop_toBottomOf="@id/title_sets"-->
            <!--app:layout_constraintStart_toStartOf="@id/title_sets"-->
            <!--tools:layout_editor_absoluteX="0dp" />-->

        <!--<ListView-->
            <!--android:id="@+id/list_weight"-->
            <!--android:layout_width="40dp"-->
            <!--android:layout_height="33dp"-->
            <!--app:layout_constraintTop_toBottomOf="@id/title_weight"-->
            <!--app:layout_constraintStart_toStartOf="@id/title_weight"-->
            <!--tools:layout_editor_absoluteX="85dp"-->
            <!--tools:layout_editor_absoluteY="52dp" />-->

        <!--<ListView-->
            <!--android:id="@+id/list_reps"-->
            <!--android:layout_width="40dp"-->
            <!--android:layout_height="33dp"-->
            <!--app:layout_constraintTop_toBottomOf="@id/title_reps"-->
            <!--app:layout_constraintStart_toStartOf="@id/title_reps"-->
            <!--tools:layout_editor_absoluteX="192dp"-->
            <!--tools:layout_editor_absoluteY="52dp" />-->


        <!--<android.support.v7.widget.RecyclerView-->
        <!--android:id="@+id/rvSets"-->
        <!--android:layout_width="308dp"-->
        <!--android:layout_height="29dp"-->
        <!--android:layout_marginStart="8dp"-->
        <!--android:layout_marginEnd="8dp"-->
        <!--app:layout_constraintBottom_toBottomOf="parent"-->
        <!--app:layout_constraintEnd_toEndOf="parent"-->
        <!--app:layout_constraintStart_toStartOf="@+id/title_s"-->
        <!--app:layout_constraintTop_toBottomOf="@+id/title_exercise_name" />-->


    </android.support.constraint.ConstraintLayout>




</LinearLayout>